<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:id="@+id/activity_login"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context="com.test.linkedin.activities.LoginActivity">

    <ImageView
        android:layout_width="@dimen/logo_size"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_height="@dimen/logo_size"
        android:src="@drawable/ic_linked_in_logo"
        android:id="@+id/logoImageView"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="@dimen/larger_margin"
        android:layout_marginRight="@dimen/larger_margin"
        android:layout_height="wrap_content"
        style="@style/LoginEditText"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        android:id="@+id/emailEditText"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/larger_margin"
        style="@style/LoginEditText"
        android:layout_marginRight="@dimen/larger_margin"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:id="@+id/passwordEditText"/>

    <Button
        android:text="@string/login_button_text"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="@dimen/larger_margin"
        android:layout_marginRight="@dimen/larger_margin"
        style="@style/GeneralButton"
        android:layout_height="wrap_content"
        android:id="@+id/loginButton"/>

    <Button
        android:text="@string/forgot_password_text"
        android:background="@android:color/transparent"
        style="@style/LinkButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/forgotPasswordButton"/>

</LinearLayout>
</ScrollView>