<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context="com.test.linkedin.activities.LinkedInProfileDetail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:padding="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="@dimen/profile_picture_size"
                android:layout_height="@dimen/profile_picture_size"
                android:src="@mipmap/ic_launcher"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:id="@+id/professionText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/job_title"
                    style="@style/Base.TextAppearance.AppCompat.Medium"/>

                <TextView
                    android:id="@+id/companyText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/company"
                    style="@style/Base.TextAppearance.AppCompat.Caption"/>

                <TextView
                    android:id="@+id/fieldText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/field"
                    style="@style/Base.TextAppearance.AppCompat.Caption"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/profile_button_size"
                android:layout_weight="1"
                style="@style/ProfileHeaderButton"
                android:src="@drawable/ic_chat_bubble_outline_gray_24px"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/ProfileHeaderButton"
                android:src="@drawable/ic_create_new_folder_gray_24px"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/ProfileHeaderButton"
                android:src="@drawable/ic_assignment_gray_24px"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray">

    </LinearLayout>

</LinearLayout>
